Bug 430651 - Weekly repeating tasks can only be created on the weekday that they happen on
Summary: Weekly repeating tasks can only be created on the weekday that they happen on
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: calendar (other bugs)
Version First Reported In: 5.16.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-21 07:57 UTC by Mathias Homann
Modified: 2021-01-03 16:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Homann 2020-12-21 07:57:38 UTC
SUMMARY

Weekly repeating tasks can only be created on the day they repeat on

STEPS TO REPRODUCE
1. create a task in kontact
2. Set start and due date to some day in the future
3. set it to repeat weekly
 

OBSERVED RESULT
The weekday that is "today" is always in the list of repetitions and can not be removed

EXPECTED RESULT
I expect to be able to create a task that repeats only on fridays on any day of the week, not just on fridays

SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.2
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.3.18-lp152.57-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-4210U CPU @ 1.70GHz
Memory: 15.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® Haswell Mobile

ADDITIONAL INFORMATION
calendar is stored in nextcloud
Comment 1 Bug Janitor Service 2020-12-24 01:31:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/incidenceeditor/-/merge_requests/10
Comment 2 gjditchfield 2021-01-03 16:18:15 UTC
Git commit 5c9c45bb8dadaa113c88ddf863eb8460df8f43c3 by Glen Ditchfield.
Committed on 02/01/2021 at 22:07.
Pushed by gditchfield into branch 'release/20.12'.

Handle changes to start dates of recurring to-dos

 * `IncidenceDateTime::load(Todo::Ptr)` did not cause
   `startDateChanged` to be emitted when the start date changed, so
   the recurrence rule editor did not recalculate its menus; see
   bug 430651.
 * If the start date's year changes, the recurrence rule menus must be
   recalculated, because the number of days in February differs
   between leap years and non-leap years.
 * In comparison to `load(Event::Ptr)`, `load(ToDo::Ptr)` did not make
   connections to `updateStartTime` in several circumstances, so
   changing the start date did not cause matching changes to the end
   date.

FIXED-IN: 5.16.1

M  +7    -7    src/incidencedatetime.cpp

https://invent.kde.org/pim/incidenceeditor/commit/5c9c45bb8dadaa113c88ddf863eb8460df8f43c3